[project]
name = "lumix-lut-converter"
version = "0.1.0"
description = "High-precision Panasonic V-Log LUT rebasing for LUMIX Like709 in-camera use"
readme = "README.md"
authors = [
    { name = "Zhengxiao Wu", email = "15712521+t0saki@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colour-science>=0.4.6",
    "numpy>=2.0",
    "pillow>=11.0",
    "scipy>=1.14",
    "typer>=0.16",
]

[project.scripts]
lumix-lut-converter = "lumix_lut_converter.cli:app"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
